(REDESIGN) Fixed the wrong vertigal-align value for modellist

--- a/public/layouts/00-patterns/css/models.css
+++ b/public/layouts/00-patterns/css/models.css
@@ -114,7 +114,7 @@
 	top: 19px;
 	position: relative;
 	right: 7px;
-	vertical-align: center;
+	vertical-align: middle;
 	width: 569px;
 }
 
